--- a/rnapoliii/Makefile
+++ b/rnapoliii/Makefile
@@ -1,2 +1,2 @@
 all:
-	python3 ../support/tutorial_tools/notebook/process_notebook.py Deposition
+	python3 ../support/tutorial_tools/notebook/process_notebook.py Deposition --branch master
