--- a/rnapoliii/Makefile
+++ b/rnapoliii/Makefile
@@ -1,2 +1,8 @@
+.PHONY: clean
+
 all:
 	python3 ../support/tutorial_tools/notebook/process_notebook.py Deposition --branch master
+
+clean:
+	rm -f Deposition.ipynb Deposition.py Deposition.md Doxyfile
+	rm -rf html
