--- a/rnapoliii/deposition/Makefile
+++ b/rnapoliii/deposition/Makefile
@@ -1,7 +1,7 @@
 .PHONY: clean
 
 all:
-	python3 ../support/tutorial_tools/notebook/process_notebook.py Deposition --branch master
+	python3 ../../support/tutorial_tools/notebook/process_notebook.py Deposition --branch master
 
 clean:
 	rm -f Deposition.ipynb Deposition.py Deposition.md Doxyfile
